--- a/index.html
+++ b/index.html
@@ -3,59 +3,60 @@
   <head>
     <title>QueenE Rugby </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h1>QueenE Rugby</h1>
     <h3>share rugbyballs with your teamates</h3>
     <p></p>
-<img src=http://queenelizabeth.epsb.ca/media/highschools/queenelizabeth/images/administration/IMG_9751_opt.jpg>
-<!-- img src= -->
-<a href="http://google.com"> Click here for Google!</a>
+    <img src=http://queenelizabeth.epsb.ca/media/highschools/queenelizabeth/images/administration/IMG_9751_opt.jpg>
+    <!-- img src= -->
+    <a href="http://google.com"> Click here for Google!</a>
 
-<a href="https://books.google.ca/books/about/The_Real_McCaw.html?id=my3BAgAAQBAJ&printsec=frontcover&source=kp_read_button&redir_esc=y#v=onepage&q&f=false"> book of richie McCaw</a>
-<a href="">https://drive.google.com/drive/folders/18hW88z8-ylrh_kNcFGFmTDSlGxTG5dKz</a>
-<div><p></p></div>
+    <a href="https://books.google.ca/books/about/The_Real_McCaw.html?id=my3BAgAAQBAJ&printsec=frontcover&source=kp_read_button&redir_esc=y#v=onepage&q&f=false"> book of richie McCaw</a>
+    <a href="">https://drive.google.com/drive/folders/18hW88z8-ylrh_kNcFGFmTDSlGxTG5dKz</a>
+    <div><p></p></div>
 
-<div class="hero">
-  <p>lastseasonrugbyteam</p>
-  <a href="#">IMG_0901.jpg.</a>
-</div>
+    <div class="hero">
+      <p>lastseasonrugbyteam</p>
+      <a href="#">IMG_0901.jpg.</a>
+    </div>
 
-<div>
-    <table style="width:100%">
-    <tr>
-      <th>last season rugby team standings</th>
-    </tr>
-    <tr>
-      <td>Memorial</td>
-      <td>20</td>
-    </tr>
-    <tr>
-      <td>Beaumont</td>
-      <td>18</td>
-    </tr>
-    <tr>
-      <td>queenelizabeth</td>
-      <td>17</td>
-    </tr>
-  <tr>
-      <td>st. john paul 2</td>
-      <td>14</td>
-    </tr>
-    <tr><tr>
-      <td>lillian osborn</td>
-      <td>7</td>
-    </tr>
-    <tr>
-      <tr>
-        <td>M.E lazerte</td>
-        <td>7</td>
-      </tr>
-      <tr>
-  </table>
-</div>
+    <div>
+      <table style="width:100%">
+        <tr>
+          <th>last season rugby team standings</th>
+          </tr>
+        <tr>
+          <td>Memorial</td>
+          <td>20</td>
+        </tr>
+        <tr>
+          <td>Beaumont</td>
+          <td>18</td>
+        </tr>
+        <tr>
+          <td>queenelizabeth</td>
+          <td>17</td>
+        </tr>
+        <tr>
+          <td>st. john paul 2</td>
+          <td>14</td>
+        </tr>
+        <tr><tr>
+          <td>lillian osborn</td>
+          <td>7</td>
+        </tr>
+        <tr>
+        <tr>
+          <td>M.E lazerte</td>
+          <td>7</td>
+        </tr>
+        <tr>
+    </table>
+  </div>
 
 
-  </body>
+</body>
+
 </html>
